# DNT-Watcher

./: .gitignore  CLAUDE.md  README.md  TOOLBAR_OPTIONS.md  dnt_hytter.yaml  helper.py  notify.py  pyproject.toml  run.py  setup_toolbar.sh  test_helper.py
DNT-watcher/: generate-icon.swift
DNT-watcher/DNT-watcher/: AvailabilityHistory.swift  BackgroundTaskManager.swift  Cabin.swift  CabinDetailView.swift  CabinListView.swift  DNTAPIClient.swift  DNT_watcherApp.swift  DateFormatter+Norwegian.swift  DefaultCabins.swift  ImageFetcher.swift  Info.plist  NotificationManager.swift  SettingsView.swift
DNT-watcher/DNT-watcher.xcodeproj/: project.pbxproj
DNT-watcher/DNT-watcher.xcodeproj/xcshareddata/xcschemes/: DNT-watcher.xcscheme
DNT-watcher/DNT-watcher/Assets.xcassets/mountain_glassy-iOS-Default-1024x1024.imageset/: Contents.json
docs/: swift-toolbar-evaluation.md  swift-toolbar-v2-features.md  transcription.md
legacy/: README.md  config.py  test_helper.py
swift-toolbar/: Package.swift  build-app.sh  launch.sh  test-app.swift
swift-toolbar/Resources/: AppIcon.icns  Info.plist
swift-toolbar/Sources/DNTWatcher/: AppDelegate.swift  AvailabilityAnalyzer.swift  CabinManager.swift  CabinModel.swift  ConfigLoader.swift  DNTAPIClient.swift  HistoryManager.swift  NotificationManager.swift  SettingsView.swift
tests/: test_core.py
