[project]
name = "dnt-watcher-workspace"
version = "1.0.0"
description = "Multi-layered DNT cabin availability monitoring system"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/notification",
    "packages/cli",
    "packages/toolbar-app",
    "packages/toolbar-qt"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]
